--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@multiversx/sdk-data-api-client": "^0.5.8",
         "@multiversx/sdk-exchange": "^0.2.17",
         "@multiversx/sdk-native-auth-server": "1.0.7",
+        "@multiversx/sdk-nestjs-monitoring": "^2.0.0-beta.2",
         "@multiversx/sdk-network-providers": "^2.0.0",
         "@nestjs/apollo": "^12.0.7",
         "@nestjs/axios": "^3.0.0",
