--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "@multiversx/sdk-exchange": "^0.2.17",
         "@multiversx/sdk-native-auth-server": "1.0.7",
         "@multiversx/sdk-nestjs-common": "^2.0.0-beta.2",
+        "@multiversx/sdk-nestjs-elastic": "^2.0.1-beta.2",
+        "@multiversx/sdk-nestjs-http": "^2.0.0-beta.2",
         "@multiversx/sdk-nestjs-monitoring": "^2.0.0-beta.2",
         "@multiversx/sdk-network-providers": "^2.0.0",
         "@nestjs/apollo": "^12.0.7",
