--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,7 @@ LOG_LEVEL=info
 JWT_SECRET=
 NATIVE_AUTH_MAX_EXPIRY_SECONDS=86400
 NATIVE_AUTH_ACCEPTED_ORIGINS=
+IMPERSONATE_URL=
 
 # RabbitMQ
 RABBITMQ_URL=
