--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "start:debug": "nest start --debug --watch",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "copy-env": "cp .env.example .env",
-        "test": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --logHeapUsage --config ./test/jest-config.json --forceExit --logHeapUsage --maxWorkers=2",
+        "test": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --logHeapUsage --config ./test/jest-config.json --forceExit --logHeapUsage",
         "test:watch": "jest --watch",
         "test:cov": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --silent --verbose false --coverage --config ./test/jest-config.json --forceExit --logHeapUsage --maxWorkers=2",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -34,7 +34,7 @@
         "@multiversx/sdk-core": "^12.8.0",
         "@multiversx/sdk-data-api-client": "^0.5.8",
         "@multiversx/sdk-exchange": "^0.2.19",
-        "@multiversx/sdk-native-auth-server": "1.0.15",
+        "@multiversx/sdk-native-auth-server": "1.0.16",
         "@multiversx/sdk-nestjs-cache": "^2.0.0-beta.2",
         "@multiversx/sdk-nestjs-common": "^2.0.0-beta.2",
         "@multiversx/sdk-nestjs-elastic": "^2.0.0-beta.3",
