--- a/src/abis/composable-tasks.abi.json
+++ b/src/abis/composable-tasks.abi.json
@@ -1,11 +1,11 @@
 {
     "buildInfo": {
         "rustc": {
-            "version": "1.71.0-nightly",
-            "commitHash": "a2b1646c597329d0a25efa3889b66650f65de1de",
-            "commitDate": "2023-05-25",
+            "version": "1.76.0-nightly",
+            "commitHash": "d86d65bbc19b928387f68427fcc3a0da498d8a19",
+            "commitDate": "2023-12-10",
             "channel": "Nightly",
-            "short": "rustc 1.71.0-nightly (a2b1646c5 2023-05-25)"
+            "short": "rustc 1.76.0-nightly (d86d65bbc 2023-12-10)"
         },
         "contractCrate": {
             "name": "composable-tasks",
@@ -13,7 +13,7 @@
         },
         "framework": {
             "name": "multiversx-sc",
-            "version": "0.44.0"
+            "version": "0.46.1"
         }
     },
     "name": "ComposableTasksContract",
@@ -23,6 +23,12 @@
     },
     "endpoints": [
         {
+            "name": "upgrade",
+            "mutability": "mutable",
+            "inputs": [],
+            "outputs": []
+        },
+        {
             "name": "composeTasks",
             "mutability": "mutable",
             "payableInTokens": [
@@ -30,7 +36,7 @@
             ],
             "inputs": [
                 {
-                    "name": "expected_token_out",
+                    "name": "min_expected_token_out",
                     "type": "EgldOrEsdtTokenPayment"
                 },
                 {
@@ -54,7 +60,7 @@
             "outputs": []
         },
         {
-            "name": "setrouterAddr",
+            "name": "setRouterAddr",
             "onlyOwner": true,
             "mutability": "mutable",
             "inputs": [
@@ -66,9 +72,8 @@
             "outputs": []
         },
         {
-            "name": "setPairAddrForTokens",
-            "onlyOwner": true,
-            "mutability": "mutable",
+            "name": "getPair",
+            "mutability": "readonly",
             "inputs": [
                 {
                     "name": "first_token_id",
@@ -77,16 +82,15 @@
                 {
                     "name": "second_token_id",
                     "type": "TokenIdentifier"
-                },
-                {
-                    "name": "new_addr",
-                    "type": "Address"
                 }
             ],
-            "outputs": []
+            "outputs": [
+                {
+                    "type": "Address"
+                }
+            ]
         }
     ],
-    "events": [],
     "esdtAttributes": [],
     "hasCallback": false,
     "types": {
