--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "class-validator": "^0.14.0",
         "config": "^3.3.7",
         "cookie-parser": "^1.4.6",
+        "dd-trace": "^5.10.0",
         "express": "^4.18.1",
         "graphql": "^16.5.0",
         "graphql-redis-subscriptions": "^2.4.2",
