--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
         "@multiversx/sdk-data-api-client": "^0.5.8",
         "@multiversx/sdk-exchange": "^0.2.19",
         "@multiversx/sdk-native-auth-server": "1.0.15",
-        "@multiversx/sdk-nestjs-cache": "^2.0.0-beta.2",
-        "@multiversx/sdk-nestjs-common": "^2.0.0-beta.2",
-        "@multiversx/sdk-nestjs-elastic": "^2.0.0-beta.3",
-        "@multiversx/sdk-nestjs-http": "^2.0.0-beta.2",
-        "@multiversx/sdk-nestjs-monitoring": "^2.0.0-beta.2",
+        "@multiversx/sdk-nestjs-cache": "^3.7.0",
+        "@multiversx/sdk-nestjs-common": "^3.7.0",
+        "@multiversx/sdk-nestjs-elastic": "^3.7.0",
+        "@multiversx/sdk-nestjs-http": "^3.7.0",
+        "@multiversx/sdk-nestjs-monitoring": "^3.7.0",
         "@multiversx/sdk-network-providers": "^2.0.0",
         "@nestjs/apollo": "^12.0.7",
         "@nestjs/axios": "^3.0.0",
