--- a/.env.example
+++ b/.env.example
@@ -18,18 +18,25 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 #MongoDB
-MONGODB_URL=
-MONGODB_DATABASE=
-MONGODB_USERNAME=
-MONGODB_PASSWORD=
+MONGODB_URL="mongodb://localhost:27017"
+MONGODB_DATABASE="development"
+MONGODB_USERNAME="admin"
+MONGODB_PASSWORD="admin"
+
+#TimescaleDB
+TIMESCALEDB_URL="localhost"
+TIMESCALEDB_PORT=5432
+TIMESCALEDB_DATABASE="timescaledb"
+TIMESCALEDB_USERNAME="timescaledb"
+TIMESCALEDB_PASSWORD="password"
 
 #Elasticsearch server to use for logging. Optional
-ELASTICSEARCH_URL="https://testnet-index.multiversx.com"
+ELASTICSEARCH_URL="https://devnet-index.multiversx.com"
 
 #MultiversX resources
-MX_API_URL="https://testnet-api.multiversx.com"
-MX_GATEWAY_URL="https://testnet-gateway.multiversx.com"
-MX_DEX_URL="https://devnet-graphql-next.maiar.exchange"
+MX_API_URL="https://devnet-api.multiversx.com"
+MX_GATEWAY_URL="https://devnet-gateway.multiversx.com"
+MX_DEX_URL="http://localhost:3005"
 MX_DATA_API_URL="https://data-api.multiversx.com"
 
 #Enable or Disable modules
@@ -48,8 +55,8 @@ LOG_LEVEL=info
 # JWT Authorization
 JWT_SECRET=
 NATIVE_AUTH_MAX_EXPIRY_SECONDS=86400
-NATIVE_AUTH_ACCEPTED_ORIGINS=
-IMPERSONATE_URL=
+NATIVE_AUTH_ACCEPTED_ORIGINS=https://localhost:3000,https://devnet.xexchange.com
+IMPERSONATE_URL=“https://devnet-extras-api.multiversx.com/impersonate/allowed”
 
 # RabbitMQ
 RABBITMQ_URL=
