--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,14 @@ services:
             - MONGO_INITDB_ROOT_PASSWORD=admin
         ports:
             - '27017:27017'
+    timescaledb:
+        image: timescale/timescaledb:latest-pg12
+        restart: always
+        shm_size: 1gb
+        ports:
+            - '5432:5432'
+        environment:
+            POSTGRES_USER: timescaledb
+            POSTGRES_PASSWORD: password
+        volumes:
+            - /var/lib/postgresql/data
