--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "start:debug": "nest start --debug --watch",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "copy-env": "cp .env.example .env",
-        "test": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --logHeapUsage --config ./test/jest-config.json --forceExit --logHeapUsage --maxWorkers=2",
+        "test": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --logHeapUsage --config ./test/jest-config.json --forceExit --logHeapUsage",
         "test:watch": "jest --watch",
         "test:cov": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --silent --verbose false --coverage --config ./test/jest-config.json --forceExit --logHeapUsage --maxWorkers=2",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -113,6 +113,7 @@
         "eslint-plugin-import": "^2.26.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
+        "rimraf": "^4.4.1",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.1",
         "ts-loader": "^6.2.1",
