--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "config": "^3.3.7",
         "cookie-parser": "^1.4.6",
         "dataloader": "^2.2.2",
+        "dd-trace": "^5.24.0",
         "express": "^4.18.1",
         "graphql": "^16.5.0",
         "graphql-redis-subscriptions": "^2.4.2",
