--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,7 @@ RABBITMQ_QUEUE=dex_service
 ENABLE_CACHE_GUEST_RATE_THRESHOLD=100
 GUEST_CACHE_REDIS_BATCH_SIZE=3
 NATIVE_AUTH_PEM_PATH=
+OPEN_EXCHANGE_RATES_APP_ID=
 
 # AWS Timestream
 AWS_TIMESTREAM_READ=false
