MEX-666 Added Crypto Rates

--- a/.env.example
+++ b/.env.example
@@ -68,6 +68,7 @@ ENABLE_CACHE_GUEST_RATE_THRESHOLD=100
 GUEST_CACHE_REDIS_BATCH_SIZE=3
 NATIVE_AUTH_PEM_PATH=
 OPEN_EXCHANGE_RATES_APP_ID=
+OPEN_EXCHANGE_RATES_URL=https://openexchangerates.org/api/latest.json
 
 # AWS Timestream
 AWS_TIMESTREAM_READ=false
