--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "dataloader": "^2.2.2",
         "express": "^4.18.1",
         "graphql": "^16.5.0",
+        "graphql-query-complexity": "^1.0.0",
         "graphql-redis-subscriptions": "^2.4.2",
         "graphql-relay": "^0.10.1",
         "graphql-subscriptions": "^2.0.0",
