MEX-684: add enable complexity flag to env example

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ ENABLE_PRIVATE_API=true
 ENABLE_CACHE_WARMER=true
 ENABLE_EVENTS_NOTIFIER=false
 ENABLE_TRACER=false
+ENABLE_COMPLEXITY=true
 
 #Log filename to use for file logging. Optional
 LOG_FILE=
