--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@datastructures-js/priority-queue": "^6.1.0",
         "@elastic/elasticsearch": "7.12.0",
         "@golevelup/nestjs-rabbitmq": "^4.0.0",
+        "@isaacs/ttlcache": "^1.4.1",
         "@multiversx/sdk-core": "^13.6.3",
         "@multiversx/sdk-exchange": "^0.2.21",
         "@multiversx/sdk-native-auth-server": "1.0.19",
