--- a/.github/workflows/load.tests.yml
+++ b/.github/workflows/load.tests.yml
@@ -19,22 +19,6 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-      rabbitmq:
-        image: 331leo/rabbitmq3-management-mqtt
-        env:
-          HOSTNAME: rabbitmq
-          RABBITMQ_NODENAME: rabbitmq
-          RABBITMQ_DEFAULT_USER: 'guest'
-          RABBITMQ_DEFAULT_PASS: 'guest'
-        ports:
-          - 5672:5672
-          - 15672:15672
-        options: >-
-          --health-cmd "rabbitmqctl node_health_check"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
       timescaledb:
         image: timescale/timescaledb-ha:pg16
         env:
@@ -44,6 +28,19 @@ jobs:
           - 5432:5432
         options: >-
           --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+      mongodb:
+        image: mongo:latest
+        env:
+          MONGO_INITDB_ROOT_USERNAME: mongodb
+          MONGO_INITDB_ROOT_PASSWORD: password
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -61,11 +58,23 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Copy config
+      run: npm run copy-env
+    
+    - name: Create Migrations
+      run: npm run typeorm:create-migration
+
+    - name: Generate Migrations
+      run: npm run typeorm:generate-migration
+
+    - name: Run Migrations
+      run: npm run typeorm:run-migrations
+
     - name: Build
       run: npm run build
 
     - name: Start Node.js API
-      run: node ./dist/main.js &
+      run: GH_ACTIONS=true node ./dist/main.js &
 
     - name: Install k6
       run: |
@@ -77,7 +86,7 @@ jobs:
 
     - name: Wait for API to be ready
       run: |
-        until curl --output /dev/null --silent --fail http://localhost:3005/graphql; do
+        until curl --output /dev/null --silent --max-time 60 http://localhost:3005/graphql; do 
           echo 'Waiting for API...'
           sleep 5
         done
@@ -108,22 +117,6 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-      rabbitmq:
-        image: 331leo/rabbitmq3-management-mqtt
-        env:
-          HOSTNAME: rabbitmq
-          RABBITMQ_NODENAME: rabbitmq
-          RABBITMQ_DEFAULT_USER: 'guest'
-          RABBITMQ_DEFAULT_PASS: 'guest'
-        ports:
-          - 5672:5672
-          - 15672:15672
-        options: >-
-          --health-cmd "rabbitmqctl node_health_check"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
       timescaledb:
         image: timescale/timescaledb-ha:pg16
         env:
@@ -133,6 +126,19 @@ jobs:
           - 5432:5432
         options: >-
           --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      
+      mongodb:
+        image: mongo:latest
+        env:
+          MONGO_INITDB_ROOT_USERNAME: mongodb
+          MONGO_INITDB_ROOT_PASSWORD: password
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -150,11 +156,23 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Copy config
+      run: npm run copy-env
+    
+    - name: Create Migrations
+      run: npm run typeorm:create-migration
+
+    - name: Generate Migrations
+      run: npm run typeorm:generate-migration
+
+    - name: Run Migrations
+      run: npm run typeorm:run-migrations
+
     - name: Build
       run: npm run build
 
     - name: Start Node.js API
-      run: node ./dist/main.js &
+      run: GH_ACTIONS=true node ./dist/main.js &
 
     - name: Install k6
       run: |
@@ -166,7 +184,7 @@ jobs:
 
     - name: Wait for API to be ready
       run: |
-        until curl --output /dev/null --silent --fail http://localhost:3005/graphql; do
+        until curl --output /dev/null --silent --max-time 60 http://localhost:3005/graphql; do 
           echo 'Waiting for API...'
           sleep 5
         done
@@ -211,6 +229,12 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
           body-includes: k6 load testing comparison
+
+      - name: Display Report Contents
+        run: |
+          echo "=== Load Test Comparison Report ==="
+          cat report.md
+          echo "================================"
 
       - name: Create or update comment
         uses: peter-evans/create-or-update-comment@v2
