Update load.tests.yml to test starting the service

--- a/.github/workflows/load.tests.yml
+++ b/.github/workflows/load.tests.yml
@@ -74,7 +74,7 @@ jobs:
       run: npm run build
 
     - name: Start Node.js API
-      run: GH_ACTIONS=true node ./dist/main.js &
+      run: GH_ACTIONS=true node ./dist/main.js
 
     - name: Install k6
       run: |
