--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,7 @@ ENABLE_CACHE_WARMER=true
 ENABLE_EVENTS_NOTIFIER=false
 ENABLE_TRACER=false
 ENABLE_COMPLEXITY=true
+ENABLE_PUSH_NOTIFICATIONS=true
 
 #Log filename to use for file logging. Optional
 LOG_FILE=
@@ -74,3 +75,10 @@ OPEN_EXCHANGE_RATES_URL=https://openexchangerates.org/api
 # AWS Timestream
 AWS_TIMESTREAM_READ=false
 AWS_TIMESTREAM_WRITE=false
+
+# Notification Service Configuration
+PUSH_NOTIFICATIONS_API_URL=
+PUSH_NOTIFICATIONS_API_KEY=
+PUSH_NOTIFICATIONS_BATCH_SIZE=100
+PUSH_NOTIFICATIONS_MAX_RETRIES=3
+PUSH_NOTIFICATIONS_CHAIN_ID=508  # 508 for devnet
