MEX-748 Added push_notifications_aip_url in env.example

--- a/.env.example
+++ b/.env.example
@@ -77,7 +77,7 @@ AWS_TIMESTREAM_READ=false
 AWS_TIMESTREAM_WRITE=false
 
 # Notification Service Configuration
-PUSH_NOTIFICATIONS_API_URL=
+PUSH_NOTIFICATIONS_API_URL=https://devnet-tools.xportal.com
 PUSH_NOTIFICATIONS_API_KEY=
 PUSH_NOTIFICATIONS_BATCH_SIZE=100
 PUSH_NOTIFICATIONS_MAX_RETRIES=3
