MEX-613: update .env.example and fix issues after branch merge

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,13 @@ REDIS_PASSWORD=""
 REDIS_PORT=6379
 REDIS_DB=0
 
+#Redis common
+REDIS_COMMON_URL="localhost"
+REDIS_COMMON_PREFIX="development_env"
+REDIS_COMMON_PASSWORD=""
+REDIS_COMMON_PORT=6384
+REDIS_COMMON_DB=0
+
 #MongoDB
 MONGODB_URL="mongodb://localhost:27017"
 MONGODB_DATABASE="development"
