--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ REDIS_COMMON_PREFIX="development_env"
 REDIS_COMMON_PASSWORD=""
 REDIS_COMMON_PORT=6384
 REDIS_COMMON_DB=0
+REDIS_COMMON_TLS=true
 
 #MongoDB
 MONGODB_URL="mongodb://localhost:27017"
