MEX-774: add config for user

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ REDIS_DB=0
 #Redis common
 REDIS_COMMON_URL="localhost"
 REDIS_COMMON_PREFIX="development_env"
+REDIS_COMMON_USER=""
 REDIS_COMMON_PASSWORD=""
 REDIS_COMMON_PORT=6384
 REDIS_COMMON_DB=0
