MEX-748 Add new env variable for accounts elastic index

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ TIMESCALEDB_PASSWORD="password"
 
 #Elasticsearch server to use for logging. Optional
 ELASTICSEARCH_URL="https://devnet-index.multiversx.com"
+ACCOUNTS_ELASTICSEARCH_URL=
 
 #MultiversX resources
 MX_API_URL="https://devnet-api.multiversx.com"
