--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ REDIS_COMMON_USER=""
 REDIS_COMMON_PASSWORD=""
 REDIS_COMMON_PORT=6379
 REDIS_COMMON_DB=0
-REDIS_COMMON_TLS=true
+REDIS_COMMON_TLS=false
 
 #MongoDB
 MONGODB_URL="mongodb://localhost:27017"
