--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,7 @@ ENABLE_EVENTS_NOTIFIER=false
 ENABLE_TRACER=false
 ENABLE_COMPLEXITY=true
 ENABLE_PUSH_NOTIFICATIONS=true
+ENABLE_TASK_RUNNER=false
 
 #Log filename to use for file logging. Optional
 LOG_FILE=
@@ -89,3 +90,6 @@ AWS_TIMESTREAM_WRITE=false
 # Notification Service Configuration
 PUSH_NOTIFICATIONS_API_URL=https://devnet-tools.xportal.com
 PUSH_NOTIFICATIONS_API_KEY=
+
+TASK_RUNNER_WALLET_PATH=
+TASK_RUNNER_WALLET_PASSWORD=
