MEX-863: conditionally enable graphql playground based on env flag

--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,7 @@ ENABLE_EVENTS_NOTIFIER=false
 ENABLE_TRACER=false
 ENABLE_COMPLEXITY=true
 ENABLE_PUSH_NOTIFICATIONS=true
+ENABLE_PLAYGROUND=false
 
 #Log filename to use for file logging. Optional
 LOG_FILE=
