--- a/.github/workflows/code.coverage.yml
+++ b/.github/workflows/code.coverage.yml
@@ -32,15 +32,15 @@ jobs:
                   redis-version: ${{ matrix.redis-version }}
 
             - name: Run unit tests
-              run: npm ci
-              run: npm run build --if-present
-              run: npm run test:cov
+            - run: npm ci
+            - run: npm run build --if-present
+            - run: npm run test:cov
 
             - name: Upload code coverage
               uses: codecov/codecov-action@v5
               with:
-                files: ./coverage/unit/clover.xml
-                flags: unittests
-                name: codecov-umbrella
-                fail_ci_if_error: true
-                verbose: true
+                  files: ./coverage/unit/clover.xml
+                  flags: unittests
+                  name: codecov-umbrella
+                  fail_ci_if_error: true
+                  verbose: true
