MEX-908: added code coverage upload token
Signed-off-by: Claudiu Lataretu <claudiu.lataretu@gmail.com>

--- a/.github/workflows/code.coverage.yml
+++ b/.github/workflows/code.coverage.yml
@@ -43,3 +43,4 @@ jobs:
                   name: codecov-umbrella
                   fail_ci_if_error: true
                   verbose: true
+                  token: ${{ secrets.CODECOV_TOKEN }}
