MEX-912: add state changes rabbit exchange and queue to .env.example

--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,8 @@ IMPERSONATE_URL=â€œhttps://devnet-extras-api.multiversx.com/impersonate/allowedâ
 RABBITMQ_URL=
 RABBITMQ_EXCHANGE=all_events
 RABBITMQ_QUEUE=dex_service
+RABBITMQ_EXCHANGE_STATE=state_accesses
+RABBITMQ_STATE_QUEUE=dex_service_state
 
 # Other
 ENABLE_CACHE_GUEST_RATE_THRESHOLD=100
