--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "redis": "^3.1.2",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.5.5",
+        "snappy": "^7.3.3",
         "ts-mixer": "^6.0.1",
         "ts-morph": "^19.0.0",
         "typeorm": "^0.3.12",
