--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
         "@datastructures-js/priority-queue": "^6.1.0",
         "@elastic/elasticsearch": "7.12.0",
         "@golevelup/nestjs-rabbitmq": "^4.0.0",
+        "@grpc/grpc-js": "^1.14.1",
+        "@grpc/proto-loader": "^0.8.0",
+        "@grpc/reflection": "^1.0.4",
         "@isaacs/ttlcache": "^1.4.1",
         "@multiversx/sdk-core": "^13.15.3",
-        "@multiversx/sdk-exchange": "^0.2.23",
+        "@multiversx/sdk-exchange": "^0.2.24",
         "@multiversx/sdk-native-auth-server": "1.0.19",
         "@multiversx/sdk-nestjs-cache": "^4.2.0",
         "@multiversx/sdk-nestjs-common": "^4.2.0",
@@ -90,6 +93,7 @@
         "rxjs": "^7.5.5",
         "ts-mixer": "^6.0.1",
         "ts-morph": "^19.0.0",
+        "ts-proto": "^2.8.3",
         "typeorm": "^0.3.12",
         "winston": "^3.7.2",
         "winston-transport": "^4.5.0"
