MEX-940: config options for state gRPC; add to bootstrap

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,10 @@ MX_GATEWAY_URL="https://devnet-gateway.multiversx.com"
 MX_DEX_URL="http://localhost:3005"
 MX_DATA_API_URL="https://data-api.multiversx.com"
 
+#State gRPC
+STATE_MICROSERVICE_SERVER_URL='localhost:5000'
+STATE_MICROSERVICE_CLIENT_URL='localhost:5000'
+
 #Enable or Disable modules
 ENABLE_PUBLIC_API=true
 ENABLE_PRIVATE_API=true
@@ -59,6 +63,7 @@ ENABLE_COMPLEXITY=true
 ENABLE_PUSH_NOTIFICATIONS=true
 ENABLE_TASK_RUNNER=false
 ENABLE_PLAYGROUND=false
+ENABLE_STATE_MICROSERVICE=true
 
 #Log filename to use for file logging. Optional
 LOG_FILE=
