MEX-962: Add XOXNO dust converter integration
Integrate the XOXNO multi-swap API as a new GraphQL module to convert
multiple low-value tokens (dust) into a single target token.

New module at src/modules/dust-converter/:
- GraphQL models mapping the XOXNO API response
- Authenticated @Query with JwtOrNativeAuthGuard
- Service layer with axios HTTP calls and txData -> TransactionModel parsing
- 10s request timeout and sanitized error messages
- Unit tests (10/10 passing)

Configuration:
- Added XOXNO_API_URL env variable
- Added getXoxnoApiUrl() to ApiConfigService
- Registered DustConverterModule in public.app.module.ts

Signed-off-by: Claudiu Lataretu <claudiu.lataretu@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -94,3 +94,6 @@ PUSH_NOTIFICATIONS_API_KEY=
 
 TASK_RUNNER_WALLET_PATH=
 TASK_RUNNER_WALLET_PASSWORD=
+
+# XOXNO Dust Converter
+XOXNO_API_URL=https://swap.xoxno.com/api/v1
