MEX-962: update example env
Signed-off-by: Claudiu Lataretu <claudiu.lataretu@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,9 @@ MX_GATEWAY_URL="https://devnet-gateway.multiversx.com"
 MX_DEX_URL="http://localhost:3005"
 MX_DATA_API_URL="https://data-api.multiversx.com"
 
+# XOXNO Dust Converter
+XOXNO_API_URL=
+
 #Enable or Disable modules
 ENABLE_PUBLIC_API=true
 ENABLE_PRIVATE_API=true
@@ -94,6 +97,3 @@ PUSH_NOTIFICATIONS_API_KEY=
 
 TASK_RUNNER_WALLET_PATH=
 TASK_RUNNER_WALLET_PASSWORD=
-
-# XOXNO Dust Converter
-XOXNO_API_URL=https://swap.xoxno.com/api/v1
